<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="@drawable/button_color"
            android:text="@string/backButton"
            android:textColor="@color/black"
            android:textColorHint="@color/teal_200"
            app:cornerRadius="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@color/white"
                android:ems="11"
                android:hint="@string/searchText"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="5dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/button_color"
                android:paddingTop="3dp"
                android:paddingBottom="0dp"
                android:text="@string/searchButton"
                android:textColor="@color/black"
                android:textColorHint="@color/teal_200"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/character_card">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</FrameLayout>